--- a/murakamishinkyu.html
+++ b/murakamishinkyu.html
@@ -8,7 +8,7 @@
         
         body {
             margin: 0;
-            padding: 20px;
+            padding: 15px;
             background-color: #f5f5f5;
             font-family: 'Noto Serif JP', serif;
             background: linear-gradient(45deg, #f3e5d8, #fff5e6);
@@ -19,7 +19,7 @@
             height: 297mm;
             margin: 0 auto;
             background-color: white;
-            padding: 30px;
+            padding: 20px;
             box-sizing: border-box;
             box-shadow: 0 5px 25px rgba(0,0,0,0.1);
             position: relative;
@@ -30,10 +30,10 @@
         }
 
         .certificate {
-            border: 8px double #8B4513;
-            padding: 30px;
+            border: 6px double #8B4513;
+            padding: 20px;
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             background-color: rgba(255,255,255,0.95);
             position: relative;
             background-image: 
@@ -46,17 +46,17 @@
         .certificate::before {
             content: '';
             position: absolute;
-            top: 10px;
-            left: 10px;
-            right: 10px;
-            bottom: 10px;
+            top: 8px;
+            left: 8px;
+            right: 8px;
+            bottom: 8px;
             border: 1px solid rgba(139,69,19,0.3);
             pointer-events: none;
         }
 
         .title {
-            font-size: 2em;
-            margin-bottom: 20px;
+            font-size: 1.8em;
+            margin-bottom: 15px;
             letter-spacing: 0.3em;
             color: #5C3317;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
@@ -66,64 +66,64 @@
         .title::after {
             content: '';
             display: block;
-            width: 100px;
+            width: 80px;
             height: 2px;
             background: linear-gradient(90deg, transparent, #8B4513, transparent);
-            margin: 10px auto;
+            margin: 8px auto;
         }
 
         .recipient {
-            font-size: 1.3em;
-            margin: 20px 0;
+            font-size: 1.2em;
+            margin: 15px 0;
             color: #333;
         }
 
         .content {
-            line-height: 2;
-            margin: 20px 0;
-            font-size: 1.1em;
+            line-height: 1.8;
+            margin: 15px 0;
+            font-size: 1em;
             color: #333;
         }
 
         .total-summary {
-            font-size: 1.1em;
-            margin: 20px 0;
+            font-size: 1em;
+            margin: 15px 0;
             font-weight: bold;
             color: #5C3317;
         }
 
         .date {
-            margin: 20px 0;
-            font-size: 1.1em;
+            margin: 15px 0;
+            font-size: 1em;
             color: #333;
         }
 
         .signature {
-            margin-top: 20px;
-            font-size: 1.1em;
+            margin-top: 15px;
+            font-size: 1em;
             color: #333;
         }
 
         .details {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            margin-top: 20px;
-            font-size: 0.9em;
+            gap: 15px;
+            margin-top: 15px;
+            font-size: 0.85em;
         }
 
         .section {
             background: rgba(255,255,255,0.9);
-            padding: 20px;
+            padding: 15px;
             border: 1px solid #D4B499;
             border-radius: 5px;
             box-shadow: 0 2px 10px rgba(139,69,19,0.1);
         }
 
         .section h2 {
-            font-size: 1.1em;
-            margin: 0 0 15px 0;
-            padding-bottom: 8px;
+            font-size: 1em;
+            margin: 0 0 10px 0;
+            padding-bottom: 6px;
             border-bottom: 2px solid #8B4513;
             color: #5C3317;
             position: relative;
@@ -146,8 +146,8 @@
         }
 
         .section li {
-            margin-bottom: 5px;
-            line-height: 1.4;
+            margin-bottom: 4px;
+            line-height: 1.3;
             position: relative;
         }
 
@@ -156,11 +156,11 @@
         }
 
         .footer {
-            margin-top: 20px;
+            margin-top: 15px;
             text-align: center;
-            font-size: 0.9em;
+            font-size: 0.85em;
             color: #666;
-            padding: 15px;
+            padding: 10px;
             border-top: 1px solid #D4B499;
             background: linear-gradient(0deg, rgba(244,233,225,0.5) 0%, transparent 100%);
         }
@@ -192,7 +192,7 @@
             }
             .container {
                 box-shadow: none;
-                padding: 20px;
+                padding: 15px;
                 width: 100%;
                 height: 100%;
                 page-break-after: avoid;
@@ -204,36 +204,36 @@
 
         .corner {
             position: absolute;
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
             border: 2px solid #8B4513;
             opacity: 0.5;
         }
 
         .corner-tl {
-            top: 10px;
-            left: 10px;
+            top: 8px;
+            left: 8px;
             border-right: none;
             border-bottom: none;
         }
 
         .corner-tr {
-            top: 10px;
-            right: 10px;
+            top: 8px;
+            right: 8px;
             border-left: none;
             border-bottom: none;
         }
 
         .corner-bl {
-            bottom: 10px;
-            left: 10px;
+            bottom: 8px;
+            left: 8px;
             border-right: none;
             border-top: none;
         }
 
         .corner-br {
-            bottom: 10px;
-            right: 10px;
+            bottom: 8px;
+            right: 8px;
             border-left: none;
             border-top: none;
         }
@@ -250,14 +250,14 @@
             <h1 class="title">感 謝 状</h1>
             <p class="recipient">村上 晴彦 様</p>
             <div class="content">
-                貴方のご支援により、<br>
+                貴殿のご支援により、<br>
                 「村上晴彦鍼灸指圧治療院 ZEN」を通じて<br>
                 多くの地域団体の活動を支援することができました。<br>
                 ここに深く感謝の意を表します。
             </div>
             <div class="total-summary">
-                支援総額：125,100円<br>
-                支援件数：1,251件
+                支援総額：125,200円<br>
+                支援件数：1,252件
             </div>
             <div class="date">2025年2月5日</div>
             <div class="signature">
@@ -267,7 +267,7 @@
         </div>
         <div class="details">
             <div class="section">
-                <h2>支援団体一覧（全52団体）</h2>
+                <h2>支援団体上位10団体（全52団体）</h2>
                 <ol>
                     <li>氷見古民家研究会（127件）</li>
                     <li>西条市の不登校支援を考える会｢はぐ」（122件）</li>
@@ -275,8 +275,8 @@
                     <li>NPO法人きずな（96件）</li>
                     <li>PROJECT ZEN（89件）</li>
                     <li>ねこあし保護猫会（73件）</li>
-                    <li>竹林をよくする会（58件）</li>
                     <li>Brave Heart楽団（58件）</li>
+                    <li>竹林をよくする会（58件）</li>
                     <li>NPO法人わらびかみ（54件）</li>
                     <li>発-hatch-（ハッチ）の工作教室（43件）</li>
                 </ol>
@@ -288,14 +288,14 @@
                     <li>小山 貴裕（49件）</li>
                     <li>亀井ハルミ（38件）</li>
                     <li>曽我部智史（36件）</li>
-                    <li>鈴木 直之（35件）</li>
+                    <li>鈴木 直之（36件）</li>
                     <li>まゆ（29件）</li>
                     <li>伊藤良二（28件）</li>
                     <li>ヒロ（25件）</li>
                     <li>飯田真麻（23件）</li>
                     <li>niyaBcat（22件）</li>
                 </ol>
-                <p style="margin-top: 10px; font-size: 0.9em;">※合計194名の方々にご支援いただきました</p>
+                <p style="margin-top: 8px; font-size: 0.85em;">※合計194名の方々にご支援いただきました</p>
             </div>
         </div>
         <div class="footer">
